engine-net-2/tests/negative/NegAndPartialEdge.grs
new graph negative/NegAndPartialEdge

xgrs init
xgrs [negAndPartialEdgeNoNodeTwoNodes]
xgrs [negAndPartialEdgeNoNodeOneNodeTwoNodes]
xgrs [negAndPartialEdgeOneNodeTwoNodes]

quit
